fix(Search input): fix the input shrinkage problem and the buttons spacing
- Hides the button when the search input is active

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -25,6 +25,7 @@
     }
 
     .desktop_navbar {
+      transition: opacity .2s ease;
       ul {
         display: flex;
         margin: 0;
@@ -89,4 +90,10 @@
         }
       }
     }
+  }
+
+  .header.searchActive .desktop_navbar{
+    opacity: 0;
+    display: none;
+    pointer-events: none;
   }
